# q3-stats-bot

./: .env_example  Cargo.toml  README.md  test.xml
.github/workflows/: release.yaml
src/: main.rs
